testsuite/tests/checks/downward_view_conversions/test.out
test_downwardconv.adb:20:22: error: downward_view_conversions - rule violation
20 |          Var : T2 := T2 (X);                   --  FLAG
   |                      ^^^^^^ 

test_downwardconv.adb:22:17: error: downward_view_conversions - rule violation
22 |          Proc2 (T2'Class (X));                 --  FLAG
   |                 ^^^^^^^^^^^^ 

